apps/usenet/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.20.3014-ls326
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /config/Backups
              name: backup
            - mountPath: /tv
              name: tv-shows
            - mountPath: /downloads
              name: downloads
          startupProbe:
            tcpSocket:
              port: 8989
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8989
            failureThreshold: 2
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: backup
          persistentVolumeClaim:
            claimName: sonarr-backup
        - name: tv-shows
          hostPath:
            path: /mnt/tank/media/tv
            type: Directory
        - name: downloads
          hostPath:
            path: /mnt/disk04/downloads/complete
            type: Directory
