apps/usenet/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: usenet
spec:
  ports:
    - port: 8989
      targetPort: 8989
  selector:
    app: sonarr
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  type: ClusterIP
